Refactor `RoomService` to improve maintainability and simplify inventory updates
- Extracted `validateHotel` method for consistent hotel validation across service methods.
- Introduced helper methods (`updateInventoryForNewRoom`, `buildRoomTypeInventory`) to streamline inventory update logic.
- Replaced manual date iteration with `datesUntil` for cleaner inventory generation in `updateInventoryForNewRoom`.
- Added `increaseInventory` and `createNew` methods in `RoomTypeInventory` for concise inventory updates.